Agregar gestión de firmas y sellos; implementar controlador, DAO y vista con carga asíncrona